## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = hw6

hw6_SOURCES = \
	main.cc \
	Passenger.cc \
	Passenger.h \
	Floor.cc \
	Floor.h \
	Car.cc \
	Car.h \
	Building.cc \
	Building.h

hw6_LDFLAGS = 

hw6_LDADD = 


AM_CXXFLAGS = -std=c++11 
